<resources>
    <!--<string name="app_name">Share &amp; Care USER</string>-->
    <string name="app_name">ENGO USER</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user">New User?</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="signup">Signup</string>
    <string name="old_user">Old user ?</string>
    <string name="forgot_password_msg">Please Provide your email ID. we will send you reset email on your mail</string>
    <string name="send_mail">Send Mail</string>


    <string-array name="user_type">
        <item>User</item>
        <item>NGO</item>
    </string-array>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add">Post</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="chooseimg">Choose Image</string>
    <string name="area">Area</string>
    <string name="comment">Enter Your Comment</string>
    <string name="appmoto"><![CDATA[“Share & Care” System receive donation from Donor for help wanted people. Our system is very useful to donor. In this system we include more details of Orphanage, School, Slum area, Old age Home.     This information also helps visitors. Donor gives donation to help wanted person which condition is very poor.In our system include the detail of donor, detail of donation, detail of trust, all detail of help wanted persons. We can try to give all details to visitor. The design and all the facilities are stand alone or in an integrated environment.]]></string>
    <string name="search">Search</string>

</resources>
