<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardElevation="5dp"
            tools:ignore="ContentDescription">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">


                <ImageView
                    android:id="@+id/comment_post_img"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/comment_post_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/email"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />


                <TextView
                    android:id="@+id/comment_post_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/description"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/comment_post_area"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/area"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/comment_post_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/area"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/comment_post_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/area"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/comment_post_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/area"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                </LinearLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardElevation="5dp"
            tools:ignore="ContentDescription">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <EditText
                    android:id="@+id/comment_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/comment" />

                <Button
                    android:id="@+id/comment_add_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/comment_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp" />


            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>